# AI-Fitness-Copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  understanding.md
app/: catalog.py  main.py  models.py  types.py
app/services/: analysis.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  schemas.py
backend/app/core/: config.py
backend/app/services/: fallback_coach.py  llm_insights.py  prompts.py
backend/tests/: test_analysis.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityLogger.tsx  AnalysisDisplay.tsx  Dashboard.tsx  FoodLogger.tsx  Onboarding.tsx
frontend/src/services/: api.ts
